# ordb

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  generate_test_data.py
ordb-ai/: classifier.py  main.py  requirements.txt
ordb-cli/: Cargo.toml  check_out.txt  dry_run_report.txt  err.txt  help.txt
ordb-cli/src/: api_client.rs  cli.rs  db.rs  enrichment.rs  main.rs  metadata.rs  phases.rs  scanner.rs  schema.sql
test_data/: imagen_disfrazada.txt
